Mon Sep  1 00:32:30 2003  Soeren Sandmann  <sandmann@daimi.au.dk>

	* tests/testtoolbar.c (main): connect to "delete_event" so the
	application will actually quit when you close the window

2003-09-01  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkuimanager.c (gtk_ui_manager_get_widget) 
	(gtk_ui_manager_get_action): g_return_if_fail() if
	path is NULL.
	(gtk_ui_manager_get_node): Avoid a segfault if path is empty.
	(gtk_ui_manager_finalize): Remove the idle on finalize. (#121125, 
	Marco Pesenti Gritti)

2003-08-31  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtktoolitem.c: Fix some typos in docs.

	* gtk/gtkuimanager.[ch] (gtk_ui_manager_get_action): New function,
	replaces gtk_ui_manager_activate().  (#120658)

	* tests/testmerge.c: Use gtk_ui_manager_get_action() instead of
	gtk_ui_manager_activate().

	* gtk/gtkaction.c: 
	* gtk/gtkactiongroup.c: Some doc tweaks.

	* gtk/gtkuimanager.[hc]: Get rid of the remove_widget signal. It
	wasn't emitted anyway. Some doc tweaks.

2003-08-30  Matthias Clasen  <maclas@gmx.de>

	* tests/testmerge.c (add_widget): Connect to "destroy" on toolbar,
	rather than to "remove" on handlebox. 

	* gtk/gtkuimanager.[hc] (gtk_ui_manager_activate): New method to
	activate an action found by following a path.  (#120658)

	* tests/testmerge.c: Add a button to test gtk_ui_manager_activate().

	* tests/testmerge.c (add_widget): Put toolbars in handleboxes.

	* gtk/gtkuimanager.[hc]: Add a boolean property, "add_tearoffs" with 
	setter and getter. If it is set, add tearoff menu items to regular 
	menus, but not to popups. Add a signal "changed", which gets emitted
	when the merged ui has changed.  (#120649, #120656)

	* tests/testmerge.c: Add button to test the generation of tearoff 
	menu items.

2003-08-29  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkactiongroup.c (gtk_action_group_add_radio_actions_full): 
	Actually group the actions together rather than putting each in its 
	own group.
