@@ -1735,6 +1735,7 @@ gtk_ui_manager_add_ui_from_string
 gtk_ui_manager_add_ui_from_file
 gtk_ui_manager_remove_ui
 gtk_ui_manager_get_ui
+gtk_ui_manager_ensure_update
 <SUBSECTION Standard>
 GTK_TYPE_UI_MANAGER
 GTK_UI_MANAGER
